# python-fritz-advanced-thermostat

./: .gitignore  Makefile  README.md  fritz_advanced_thermostat.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: lint.yml  lint_and_test.yml  pypi.yml
fritz_advanced_thermostat/: __init__.py  errors.py  fritz_advanced_thermostat.py  utils.py
test/: test_data_pkg.py  test_thermostat_data_generator.py
test/fixtures/: data_pkg_Arbeitszimmer.json  data_pkg_Arbeitszimmer_dry_run.json  data_pkg_Arbeitszimmer_offset.json  data_pkg_Bad-Oben.json  data_pkg_Bad-Oben_dry_run.json  data_pkg_Bad-Oben_offset.json  data_pkg_Bad-Unten.json  data_pkg_Bad-Unten_dry_run.json  data_pkg_Bad-Unten_offset.json  data_pkg_Flur-Oben.json  data_pkg_Flur-Oben_dry_run.json  data_pkg_Flur-Oben_offset.json  data_pkg_Gaestezimmer.json  data_pkg_Gaestezimmer_dry_run.json  data_pkg_Gaestezimmer_offset.json  data_pkg_Kueche.json  data_pkg_Kueche_dry_run.json  data_pkg_Kueche_offset.json  data_pkg_Küche.json  data_pkg_Küche_dry_run.json  data_pkg_Küche_offset.json  data_pkg_Schlafzimmer.json  data_pkg_Schlafzimmer_dry_run.json  data_pkg_Schlafzimmer_offset.json  data_pkg_Wohnzimmer-Nord.json  data_pkg_Wohnzimmer-Nord_dry_run.json  data_pkg_Wohnzimmer-Nord_offset.json  data_pkg_Wohnzimmer-West.json  data_pkg_Wohnzimmer-West_dry_run.json  data_pkg_Wohnzimmer-West_offset.json  expected_data_pkg_grouped.json  expected_data_pkg_ungrouped.json  expected_payload_grouped.txt  expected_payload_ungrouped.txt  grouped.json  holidays.json  raw_data.json  summer.json  (+6 more)
